--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,3 +3,4 @@
 add_executable(test_skip_list test_skip_list.cc)
 add_executable(leetcode leetcode.cc)
 add_executable(leetcode2 leetcode2.cc)
+add_executable(leetcode3 leetcode3.cc)
