--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,1 @@
-
-
-add_executable(test_skip_list test_skip_list.cc)
-add_executable(leetcode leetcode.cc)
-add_executable(leetcode2 leetcode2.cc)
-add_executable(leetcode3 leetcode3.cc)
+add_executable(test_insert_erase test_insert_erase.cc)
